--- a/styles.css
+++ b/styles.css
@@ -1,127 +1,126 @@
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
+
 .description {
   margin: 10px;
 }
-.hidden {
-	display: none;
+
+.wrapper #taskList .doneTask .close, .wrapper #taskList .doneCheckbox {
+  position: absolute;
+  right: 5px;
+  width: 20px;
+  height: 20px;
 }
+
+.wrapper #taskList .task, .wrapper #taskList .edit {
+  box-sizing: border-box;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  border: 2px solid #5bb153;
+  border-radius: 7px;
+  padding: 5px 30px 5px 10px;
+  position: relative;
+  text-align: justify;
+  min-height: 55px;
+}
+
 .wrapper {
-	resize: horizontal;
-	overflow: auto;
-	display: grid;
-	border: 3px dashed rgb(240, 164, 50);
-	background-color: rgb(255, 254, 211);
-	border-radius: 20px;
-	width: 60%;
-	max-width: 90%;
-	min-height: 220px;
-	margin: 20px auto;
-	min-width: 510px;
-	grid-template-columns: 200px 1fr;
-	grid-template-rows: 70px 1fr;
-	padding: 10px;
-	grid-column-gap: 10px;
+  resize: horizontal;
+  overflow: auto;
+  border: 3px dashed #f0a432;
+  background-color: #fffed3;
+  border-radius: 20px;
+  width: 60%;
+  max-width: 90%;
+  min-width: 510px;
+  min-height: 220px;
+  margin: 20px auto;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 70px 1fr;
+  grid-column-gap: 10px;
 }
-.instruction {
-	grid-column: 1;
-	grid-row: 1;
-	justify-self: center;
-	text-align: center;
+.wrapper .taskCreatorHeader {
+  grid-row: 1;
+  justify-self: center;
+  text-align: center;
+  grid-column: 1;
 }
-.taskCreator {
-	grid-column: 1;
-	grid-row: 2;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+.wrapper .taskCreator {
+  grid-column: 1;
+  grid-row: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-	#taskCreator__editor {
-		height: 100px;
-		border: 2px solid rgb(97, 136, 219);
-		border-radius: 20px;
-		padding: 10px;
-		text-align: justify;
-		resize: none;
-	}
-		#taskCreator__editor:focus {
-			outline: none;
-			box-shadow: 0px 0px 5px rgb(172, 195, 245);
-		}
-	#save {
-		width: 50%;
-		height: 30px;
-		border-radius: 5px;
-		margin-top: 5px;
-	}
-		#save:focus {
-			outline: none;
-		}
-.header {
-	grid-column: 2;
-	grid-row: 1;
-	justify-self: center;
-	text-align: center
+.wrapper .taskCreator #taskCreator__editor {
+  height: 100px;
+  border: 2px solid #6188db;
+  border-radius: 20px;
+  padding: 10px;
+  text-align: justify;
+  resize: none;
 }
-	.tasksToDo {
-		/* font-size: 2em; */
-		color: rgb(43, 73, 243);
-	}
-#taskList {
-	list-style-type: none;
-	grid-column: 2;
-	grid-row: 2;
-	display: grid;
-	grid-template-columns: repeat(auto-fit, 300px);
-	gap: 10px;
-	align-content: start;
+.wrapper .taskCreator #taskCreator__editor:focus {
+  outline: none;
+  box-shadow: 0px 0px 5px #acc3f5;
 }
-	.task, .edit {
-		box-sizing: border-box;
-		white-space: pre-wrap;
-		overflow-wrap: break-word;
-		background-color:  rgba(43, 243, 60, 0.521);
-		border: 2px solid rgb(91, 177, 83);
-		border-radius: 7px;
-		padding: 5px 30px 5px 10px;
-		position: relative;
-		text-align: justify;
-		min-height: 55px;
-	}
-	.edit {
-		outline: none;
-		resize: none;
-		background-color:  rgba(156, 243, 43, 0.521);
-		overflow: clip;
-	}
-	.doneTask {
-		background-color:  rgba(182, 182, 182, 0.521);
-		border: 2px solid rgb(182, 182, 182);
-	}
-		.doneCheckbox {
-			position: absolute;
-			top: 5px;
-			right: 5px;
-			width: 20px; 
-			height: 20px;
-			margin: 0;
-		}
-		.close {
-			position: absolute;
-			top: 30px;
-			right: 5px;
-			width: 20px;
-			height: 20px;
-			padding: 0;
-			font-weight: 700;
-			color: rgb(187, 0, 0);
-			font-size: 1em;
-			border-radius: 3px;
-			border: 1px solid rgb(167, 167, 167);
-			outline: none;
-		}
-		.close:disabled {
-			color: rgb(167, 167, 167, 0.5);
-		}
+.wrapper .taskCreator #save {
+  width: 50%;
+  height: 30px;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+.wrapper .taskCreator #save:focus {
+  outline: none;
+}
+.wrapper .header {
+  grid-row: 1;
+  justify-self: center;
+  text-align: center;
+  grid-column: 2;
+}
+.wrapper .header .tasksToDo {
+  color: #2b49f3;
+}
+.wrapper #taskList {
+  list-style-type: none;
+  grid-column: 2;
+  grid-row: 2;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 300px);
+  gap: 10px;
+  align-content: start;
+}
+.wrapper #taskList .task {
+  background-color: rgba(43, 243, 60, 0.521);
+}
+.wrapper #taskList .edit {
+  outline: none;
+  resize: none;
+  background-color: rgba(156, 243, 43, 0.521);
+}
+.wrapper #taskList .doneTask {
+  background-color: rgba(182, 182, 182, 0.521);
+  border: 2px solid #b6b6b6;
+}
+.wrapper #taskList .doneTask .close {
+  top: 30px;
+  font-weight: 700;
+  color: #bb0000;
+  font-size: 1em;
+  border-radius: 3px;
+  border: 1px solid #a7a7a7;
+}
+.wrapper #taskList .doneCheckbox {
+  top: 5px;
+}
+
+.hidden {
+  display: none;
+}
+
+/*# sourceMappingURL=styles.css.map */
